# kamu-engine-flink

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  DEVELOPER.md  Makefile  README.md  TODO.md  build.sbt  docker-compose.yaml
adapter/: Cargo.toml  rust-toolchain
adapter/src/: adapter.rs  flink.rs  grpc.rs  lib.rs  main.rs
image/: Dockerfile  docker-entrypoint.sh  flink-conf.yaml  log4j-cli.properties
project/: assembly.sbt
src/main/java/dev/kamu/engine/flink/: AvroConversions.java  CustomFileMonitoringFunction.java  CustomFileReaderOperator.java  CustomFileReaderOperatorFactory.java  CustomLocalStreamExecutionEnvironment.java  CustomWatermarksOperator.java  ParquetRowInputFormatEx.java  ParquetSchemaConverterEx.java  RowConverterEx.java  RowMaterializerEx.java  RowReadSupportEx.java
src/main/java/org/apache/flink/formats/parquet/: ParquetColumnarRowInputFormatKamu.java  ParquetVectorizedInputFormatKamu.java
src/main/java/org/apache/flink/formats/parquet/utils/: ParquetSchemaConverterKamu.java
src/main/scala/dev/kamu/engine/flink/: AvroConverter.java  BoundedOutOfOrderWatermark.scala  ChangelogOperator.scala  Engine.scala  EngineApp.scala  EngineAppX.scala  OffsetOperator.scala  Op.scala  ParquetFilesStreamSourceFunction.scala  ParquetSourceFunction.scala  ParuqetSink.scala  RawQueryApp.scala  RawQueryEngine.scala  SchemaConverter.scala  SliceStats.scala  SnitchOperator.scala  SnitchSink.scala  StatsOperator.scala  StatsSink.scala  StreamHelpers.scala  TransformApp.scala  TransformDef.scala  TransformEngine.scala  UnboundedFromElementsFunction.java  WatermarkExtractors.scala
src/test/scala/dev/kamu/engine/flink/test/: AggregationTest.scala  EngineAggregationTest.scala  EngineFormatsTest.scala  EngineHashTest.scala  EngineHelpers.scala  EngineJoinStreamToStreamTest.scala  EngineJoinStreamToTemporalTableTest.scala  EngineMapTest.scala  EngineRawQueryTest.scala  EngineRunner.scala  EngineTopNTest.scala  FunctionalAggregationTest.scala  FunctionalJoinStreamToTemporalTableTest.scala  FunctionalTopNTest.scala  JoinStreamToStreamTest.scala  JoinStreamToTemporalTableTest.scala  ParquetHelpers.scala  ParquetReaderTest.scala  ParquetSinkTest.scala  ParquetSourceTest.scala  ParquetWriterTest.scala  ProjectionTest.scala  StreamSink.scala  TimeHelpers.scala  TopNTest.scala
(+4 files in other folders)
